--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -1,12 +1,14 @@
 [program:voiceplatform]
  
+
+command=/pypro/p3dj11/bin/uwsgi --ini /pypro/voiceplatform/deploy/voiceplatform_stage_uwsgi.ini
 directory=/pypro/voiceplatform
-command=/pypro/p3dj11/bin/uwsgi /pypro/voiceplatform/deploy/voiceplatform_stage_uwsgi.ini
- 
+
+startsecs=0
+stopwaitsecs=0
+autostart=true
+autorestart=true
 stdout_logfile=/var/log/supervisor/voiceplatform.log
 stderr_logfile=/var/log/supervisor/voiceplatform.log
  
-autostart=true
-autorestart=true
 killasgroup=true
-environment=C_FORCE_ROOT="yes"
