--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -11,7 +11,7 @@ wsgi-file = %(chdir)/wsgi.py
 socket = %(rundir)/%(prjname).sock
 pidfile = %(rundir)/%(prjname).pid
 touch-reload = %(rundir)/%(prjname).reload
-daemonize = %(logdir)/%(prjname).log
+#daemonize = %(logdir)/%(prjname).log
 
 workers = 4
 gid = root
