--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -10,4 +10,5 @@ stderr_logfile=/var/log/supervisor/voiceplatform.log
 autostart=true
 autorestart=true
 killasgroup=true
-environment=C_FORCE_ROOT="yes"
+user=www-data
+environment=C_FORCE_ROOT="false"
