--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -10,5 +10,4 @@ stderr_logfile=/var/log/supervisor/voiceplatform.log
 autostart=true
 autorestart=true
 killasgroup=true
-user=www-data
-environment=C_FORCE_ROOT="false"
+environment=C_FORCE_ROOT="true"
