--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -9,6 +9,7 @@ chdir = %(prjdir)/src
 home = /pypro/p3dj11
 wsgi-file = %(chdir)/wsgi.py
 socket = %(rundir)/%(prjname).sock
+chmod-socket=666
 pidfile = %(rundir)/%(prjname).pid
 touch-reload = %(rundir)/%(prjname).reload
 #daemonize = %(logdir)/%(prjname).log
