--- a/deploy/voiceplatform_stage_nginx.conf
+++ b/deploy/voiceplatform_stage_nginx.conf
@@ -1,6 +1,6 @@
 server{
     listen 80;
-    server_name voice.enjoyst.com;
+    server_name voice.enjoyst.com localhost;
     client_max_body_size 100m;
     set $proj_name voiceplatform;
     
