机器人发送

--- a/deploy/voiceplatform_stage_nginx.conf
+++ b/deploy/voiceplatform_stage_nginx.conf
@@ -4,8 +4,8 @@ server{
     client_max_body_size 100m;
     set $proj_name voiceplatform;
     
-    access_log /var/log/nginx/$proj_name.log;
-    error_log /var/log/nginx/$proj_name.log;
+    access_log /var/log/nginx/voiceplatform.log;
+    error_log /var/log/nginx/voiceplatform.log;
 
     location /doc {
         alias /pypro/$proj_name/doc/build/html;
