--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -28,7 +28,7 @@ enable-threads = false
 max-requests = 1024
 harakiri = 30
 
-disable-logging = true
+#disable-logging = true
 log-5xx = true
 log-4xx = true
 log-slow = true
