--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -121,6 +121,6 @@ server {
 
         # 所有请求都转发
         location / {
-                 proxy_pass http://localhost:15674/;
+                 proxy_pass ws://localhost:15674;
         }
 }
