--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -104,6 +104,10 @@ server{
     }
 }
 
+ upstream  websocket {
+            # this is the actual rabbitmq server address
+            server 127.0.0.1:15674 
+    }
 server {
         listen 10831; 
         ssl on;
@@ -120,7 +124,7 @@ server {
         proxy_set_header Connection 'upgrade';
 
         # 所有请求都转发
-        location / {
-                 proxy_pass ws://localhost:15674;
+        location /ws/ {
+                 proxy_pass http://websocket;
         }
 }
