--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -104,10 +104,10 @@ server{
     }
 }
 
- upstream  websocket {
-            # this is the actual rabbitmq server address
-            server 127.0.0.1:15674 
-    }
+upstream  websocket {
+           # this is the actual rabbitmq server address
+           server 127.0.0.1:15674 
+   }
 server {
         listen 10831; 
         ssl on;
@@ -120,8 +120,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X_Forward_For $proxy_add_x_forwarded_for;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Upgrade websocket;
+        proxy_set_header Connection upgrade;
 
         # 所有请求都转发
         location /ws/ {
