--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -106,8 +106,9 @@ server{
 
 upstream  websocket {
            # this is the actual rabbitmq server address
-           server 127.0.0.1:15674 
+           server 127.0.0.1:15674;
    }
+   
 server {
         listen 10831; 
         ssl on;
