--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -128,4 +128,9 @@ server {
         location /ws/ {
                  proxy_pass http://websocket;
         }
+        location /wss/ {
+                 proxy_pass http://websocket;
+        }
+        
+        
 }
