--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -121,8 +121,8 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X_Forward_For $proxy_add_x_forwarded_for;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade websocket;
-        proxy_set_header Connection upgrade;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
 
         # 所有请求都转发
         location /ws/ {
