--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -125,12 +125,7 @@ server {
         proxy_set_header Connection 'upgrade';
 
         # 所有请求都转发
-        location /ws/ {
+        location / {
                  proxy_pass http://websocket;
-        }
-        location /wss/ {
-                 proxy_pass http://websocket;
-        }
-        
-        
+        }    
 }
