--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -116,16 +116,19 @@ server {
         ssl_certificate_key /pypro/voiceplatform/deploy/liu.enjoyst.com/Nginx/2_liu.enjoyst.com.key;
         
         server_name liu.enjoyst.com; # 你的网址名称
-        # 转发websocket需要的设置
-        proxy_set_header X-Real_IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X_Forward_For $proxy_add_x_forwarded_for;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+      
 
+     
         # 所有请求都转发
-        location / {
-                 proxy_pass http://websocket;
+        location /ws/ {
+            proxy_pass http://websocket;
+                 
+            # 转发websocket需要的设置
+            proxy_set_header X-Real_IP $remote_addr;
+            proxy_set_header Host $host;
+            proxy_set_header X_Forward_For $proxy_add_x_forwarded_for;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
         }    
 }
