--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -106,7 +106,7 @@ server{
 
 upstream  websocket {
            # this is the actual rabbitmq server address
-           server 127.0.0.1:15674;
+           server localhost:15674;
    }
    
 server {
