--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -120,7 +120,7 @@ server {
 
      
         # 所有请求都转发
-        location /ws/ {
+        location /ws {
             proxy_pass http://websocket;
                  
             # 转发websocket需要的设置
