--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -14,13 +14,15 @@ pidfile = %(rundir)/%(prjname).pid
 touch-reload = %(rundir)/%(prjname).reload
 #daemonize = %(logdir)/%(prjname).log
 
-workers = 4
+workers = 10
 gid = root
 uid = root
 enable-threads = true
+threads=10
+
 post-buffering = 4096
 
-enable-threads = false
+#enable-threads = false
 #gevent=100
 #gevent-early-monkey-patch
 #gevent-monkey-patch
