--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -38,3 +38,4 @@ log-big = true
 
 #unique-cron = 0 1 -1 -1 -1 %(home)/bin/python %(chdir)/manage.py backup_db
 unique-cron = -1 -1 -1 -1 -1 %(home)/bin/python %(chdir)/manage.py calltask
+unique-cron = -5 -1 -1 -1 -1 %(home)/bin/python %(chdir)/manage.py check_call_over
