--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -1,3 +1,8 @@
+upstream  rabbitmq_admin {
+           # this is the actual rabbitmq server address
+           server localhost:15672;
+   }
+   
 server{
     listen 80;
     server_name liu.enjoyst.com localhost;
@@ -17,6 +22,9 @@ server{
         alias /pypro/$proj_name/src/static;
         expires 365d;
         access_log off;
+    }
+    location /mq {
+        proxy_pass http://rabbitmq_admin
     }
 
     location /media {
