--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -24,7 +24,7 @@ server{
         access_log off;
     }
     location /mq {
-        proxy_pass http://rabbitmq_admin
+        proxy_pass http://rabbitmq_admin;
     }
 
     location /media {
