--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -1,6 +1,5 @@
 upstream  rabbitmq_admin {
-           # this is the actual rabbitmq server address
-           server localhost:15672;
+        server localhost:15672;
    }
    
 server{
@@ -23,7 +22,7 @@ server{
         expires 365d;
         access_log off;
     }
-    location /mq {
+    location /mq/ {
         proxy_pass http://rabbitmq_admin;
         proxy_set_header   Host   $host;
         proxy_set_header   X-Real-IP  $remote_addr;
