--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -22,8 +22,8 @@ server{
         expires 365d;
         access_log off;
     }
-    location /mq/ {
-        proxy_pass http://rabbitmq_admin;
+    location /mq {
+        proxy_pass http://rabbitmq_admin/;
         proxy_set_header   Host   $host;
         proxy_set_header   X-Real-IP  $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
