--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -23,7 +23,7 @@ server{
         access_log off;
     }
     location /mq {
-        proxy_pass http://rabbitmq_admin/;
+        proxy_pass http://localhost:15672/;
         proxy_set_header   Host   $host;
         proxy_set_header   X-Real-IP  $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
