--- a/deploy/voiceplatform_celery_super.conf
+++ b/deploy/voiceplatform_celery_super.conf
@@ -3,6 +3,7 @@
 
 command=celery worker -l info -A settings --concurrency=5
 directory=/pypro/voiceplatform/src
+environment=EXTRA_HOST=Celery
 
 stdout_logfile=/var/log/supervisor/voiceplatform_celery.log
 stderr_logfile=/var/log/supervisor/voiceplatform_celery.log
