--- a/deploy/voiceplatform_celery_super.conf
+++ b/deploy/voiceplatform_celery_super.conf
@@ -1,7 +1,7 @@
 [program:voiceplatform_celery]
  
 
-command=celery worker -l info -A settings --concurrency=10&&celery -A proj settings --port=10838
+command=celery worker -l info -A settings --concurrency=10
 directory=/pypro/voiceplatform/src
 environment=EXTRA_HOST=Celery
 
@@ -12,3 +12,4 @@ autostart=true
 autorestart=true
 killasgroup=true
 environment=C_FORCE_ROOT="true"
+
