--- a/deploy/voiceplatform_celery_super.conf
+++ b/deploy/voiceplatform_celery_super.conf
@@ -13,3 +13,17 @@ autorestart=true
 killasgroup=true
 environment=C_FORCE_ROOT="true"
 
+
+[program:voiceplatform_celery_flower]
+ 
+command=celery -A settings flower --port=10838
+directory=/pypro/voiceplatform/src
+environment=EXTRA_HOST=Celery
+
+stdout_logfile=/var/log/supervisor/voiceplatform_celery_flower.log
+stderr_logfile=/var/log/supervisor/voiceplatform_celery_flower.log
+ 
+autostart=true
+autorestart=true
+killasgroup=true
+environment=C_FORCE_ROOT="true"
