--- a/deploy/voiceplatform_celery_super.conf
+++ b/deploy/voiceplatform_celery_super.conf
@@ -1,7 +1,7 @@
 [program:voiceplatform_celery]
  
 
-command=celery worker -l info -A settings --concurrency=10
+command=/pypro/p3dj11/bin/celery worker -l info -A settings --concurrency=10
 directory=/pypro/voiceplatform/src
 environment=EXTRA_HOST=Celery
 
@@ -16,7 +16,7 @@ environment=C_FORCE_ROOT="true"
 
 [program:voiceplatform_celery_flower]
  
-command=celery -A settings flower --port=10838
+command=/pypro/p3dj11/bin/celery -A settings flower --port=10838
 directory=/pypro/voiceplatform/src
 environment=EXTRA_HOST=Celery
 
