--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -11,3 +11,16 @@ autostart=true
 autorestart=true
 killasgroup=true
 environment=C_FORCE_ROOT="true"
+
+[program:voiceplatform-filebeat]
+
+command=/userfile/filebeat/filebeat -e -c /pypro/voiceplatform/deploy/filebeat.yml
+directory=/pypro/voiceplatform
+
+stdout_logfile=/var/log/supervisor/voiceplatform_filebeat.log
+stderr_logfile=/var/log/supervisor/voiceplatform_filebeat.log
+ 
+autostart=true
+autorestart=true
+killasgroup=true
+environment=C_FORCE_ROOT="true"
