--- a/deploy/filebeat.yml
+++ b/deploy/filebeat.yml
@@ -10,9 +10,9 @@ output.elasticsearch:
   hosts: ["localhost:9200"]
   username: "elastic"
   password: "he27375089" 
-  index: "voice-beat-%{[beat.version]}-%{+yyyy.MM.dd}"
+  index: "voice-beat-%{+yyyy.MM.dd}"
 
 setup.template:
-  name: "voice-beat-"
+  name: "voice-beat"
   pattern: "voice-beat-*"
   enabled: false
