--- a/deploy/voiceplatform_stage_uwsgi.ini
+++ b/deploy/voiceplatform_stage_uwsgi.ini
@@ -40,4 +40,4 @@ log-big = true
 unique-cron = -1 -1 -1 -1 -1 %(home)/bin/python %(chdir)/manage.py calltask
 unique-cron = -5 -1 -1 -1 -1 %(home)/bin/python %(chdir)/manage.py check_call_over
 
-attach-daemon = %(home)/bin/python %(chdir)/../deploy/filebeat/filebeat.py
+#attach-daemon = %(home)/bin/python %(chdir)/../deploy/filebeat/filebeat.py
