--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -14,7 +14,9 @@ environment=C_FORCE_ROOT="true"
 
 [program:voiceplatform-filebeat]
 
-command=/userfile/filebeat/filebeat -e -c /pypro/voiceplatform/deploy/filebeat.yml
+#command=/userfile/filebeat/filebeat -e -c /pypro/voiceplatform/deploy/filebeat.yml
+command = /pypro/p3dj11/bin/python /pypro/voiceplatform/src/../deploy/filebeat/filebeat.py
+
 directory=/pypro/voiceplatform
 
 stdout_logfile=/var/log/supervisor/voiceplatform_filebeat.log
