--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -15,7 +15,7 @@ environment=C_FORCE_ROOT="true"
 [program:voiceplatform-filebeat]
 
 #command=/userfile/filebeat/filebeat -e -c /pypro/voiceplatform/deploy/filebeat.yml
-command = /pypro/p3dj11/bin/python /pypro/voiceplatform/src/../deploy/filebeat/filebeat.py
+command = /pypro/p3dj11/bin/python /pypro/voiceplatform/src/../script/filebeat.py
 
 directory=/pypro/voiceplatform
 
