--- a/deploy/voiceplatform_stage_super.conf
+++ b/deploy/voiceplatform_stage_super.conf
@@ -17,7 +17,7 @@ environment=C_FORCE_ROOT="true"
 #command=/userfile/filebeat/filebeat -e -c /pypro/voiceplatform/deploy/filebeat.yml
 command = /pypro/p3dj11/bin/python /pypro/voiceplatform/src/../script/filebeat.py
 
-directory=/pypro/voiceplatform
+directory=/pypro/voiceplatform/src/../script
 
 stdout_logfile=/var/log/supervisor/voiceplatform_filebeat.log
 stderr_logfile=/var/log/supervisor/voiceplatform_filebeat.log
