--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -78,7 +78,7 @@ server{
     set $proj_name voiceplatform;
     
     access_log /var/log/nginx/voiceplatform.log;
-    error_log /var/log/nginx/voiceplatform.log;
+    error_log /var/log/nginx/voiceplatform.error.log;
 
     location /doc {
         alias /pypro/$proj_name/doc/build/html;
