debug nginx doc

--- a/deploy/voiceplatform_stage2_nginx.conf
+++ b/deploy/voiceplatform_stage2_nginx.conf
@@ -13,8 +13,12 @@ server{
 
     location /doc {
         alias /pypro/$proj_name/doc/build/html;
-        expires 1d;
+        #expires 1d;
         access_log off;
+        if ($request_filename ~ .*\.(htm|html)$)
+        {
+               add_header Cache-Control no-cache;
+        }
     }
 
     location /static {
@@ -82,8 +86,11 @@ server{
 
     location /doc {
         alias /pypro/$proj_name/doc/build/html;
-        expires 1d;
         access_log off;
+        if ($request_filename ~ .*\.(htm|html)$)
+        {
+               add_header Cache-Control no-cache;
+        }
     }
 
     location /static {
